<resources>
    <string name="app_name">بازی ثروتمندان</string>
    <string name="search">جستجو</string>
    <string name="my_shop">فروشگاه من</string>
    <string name="slideshow_string">Special plans</string>
    <string name="subcategory1">کالای دیجیتال</string>
    <string name="subcategory2">مد و پوشاک</string>
    <string name="subcategory3">خانه، آشپزخانه و ابزار</string>
    <string name="subcategory4">آرایشی و بهداشتی</string>
    <string name="subcategory5">کتاب، فرهنگ و هنر</string>
    <string name="subcategory6">ورزش و سفر</string>
    <string name="subcategory7">مادر و کودک</string>
    <string name="subcategory8">وسایل نقلیه و صنعتی</string>
    <string name="subcategory9">خدمات</string>
    <string name="product_cat">product cat</string>
    <string name="subcat_name">نام دسته</string>
    <string name="home">خانه</string>
    <string name="list">لیست دسته بندی محصولات</string>
    <string name="best_sellers">پرفروش ترین ها</string>
    <string name="most_viewed">پربازدیدترین ها</string>
    <string name="newest">جدیدتین ها</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="sample_email">sample@email.com</string>
    <string name="account_name">نام کاربری</string>
    <string name="categories">دسته بندی ها</string>
    <string name="full_list">لیست کامل</string>
    <string name="product_name">نام محصول</string>
    <string name="buy">خرید</string>
    <string name="price">قیمت</string>
    <string name="description">توضیحات</string>
    <string name="product_pic">تصویر محصول</string>
    <string name="choose_cat">انتخاب دسته بندی محصول</string>
    <string name="choose">انتخاب</string>
    <string name="add_pic">افزودن عکس</string>
    <string name="add_to_my_shop">افزودن به فروشگاه</string>
    <string name="choose_sub_cat">انتخاب زیر شاخه</string>
    <string name="product_price">10000</string>
    <string name="number">تعداد</string>
    <string name="total_price">قیمت کل</string>
    <string name="credit">999999999</string>
    <string name="txtCredit">اعتبار</string>
    <string name="store">فروشگاه</string>
    <string name="competition">مسابقه</string>
    <string name="learn">آموزش</string>
    <string name="time_notification_title_template">Time: %1$s</string>
    <string name="time_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="history">تاریخچه</string>
    <string name="setting">تنظیمات</string>
    <string name="aboutUs">درباره ما</string>
    <string name="aboutGame">درباره بازی</string>
    <string name="contactUs">تماس با ما</string>
    <string name="exit">خروج</string>
    <string name="reset">بازنشانی</string>
    <string name="communication_paths">راه های ارتباطی</string>
    <string name="in_the_name_of_god">بسمه تعالی</string>
    <string name="tutorial1">دوستانی که اپلیکیشن بازی ثروتمندان را دانلود کردید ضمن اینکه خیلی خوشحالم از همراهی شما و بهتون تبریک میگم که به فکر سر و سامان دادن به زندگی خودتون هستید، بذارید همین اول یک موضوعی را خیلی محکم و قطعی خدمت شما بزرگواران عرض کنم و اون اینه که نتیجه ای که شما از بازی ثروتمندان میتونید بگیرید ارتباط بسیار محکم و مستقیمی با نحوه انجام درست بازی داره.پس اول از همه وقت بذارید و تمام اصول بازی را یاد بگیرید و بعد برید سراغ بازی. من به شخصه افراد زیادی را می شناسم که با کار کردن روی ذهنشون و ثروتمند کردن اون، تونستن به ثروت و درآمد بسیار بالایی برسند و مطمئنم که این راه، راهی است که همه میتوننن ازش نتیجه بگیرند و ذهن، نعمت بی نظیری است که خدای مهربان در وجود همه ما قرار داده است. نتیجه سالها مطالعه و به کارگیری و آزمایش کردن اصول موفقیت برای من این بوده است که هر فرد برای رسیدن به موفقیت و به دست آوردن هر آنچه که در زندگی خودش میخواد فقط و فقط به دو تا ابزار نیاز داره: ذهن تربیت شده و زمان. جالب اینجاست که من و همه شماهایی که الان دارید این متن را می خوانید هر دو تای این ابزارها را در اختیار داریم چرا که فعلا در قید حیاتیم و هر انسان زنده ای دارای ذهن هست و همینطور تا موعد مشخصی در این دنیای مادی زمان در اختیار وی خواهد بود. نکته ای که در اینجا میخواهم متذکر بشوم اینست که پرورش دادن ذهن کار چندان آسانی نیست ولی واقعا تنها کاری که برای پیمودن مسیر موفقیت باید انجام بدید همین یک کاره!!!! پس ارزششو داره که همه انرژی و توان خودتونو صرف کنید تا روی پرورش ذهن خودتون کار کنید.زمانی که ذهن شما برنامه ریزی مجدد شد و افکار و باورهای قدرتمند و پیش برنده در آن ریشه دواند، ذهنیت شما نسبت به مسائل و اتفاقات پیرامونتون عوض میشه و به این ترتیب جهان هستی مطابق با ذهنیت جدیدتان با شما برخورد و تعامل میکنه. بازی ثروتمندان یک گام بزرگ در مسیر ثروتمندتر کردن ذهن شماست.اصول و چهارچوب اولیه این بازی توسط خانم استر هیکس طراحی شده و در کتاب جذب پول به همراه چند تمرین دیگه آورده شده است.من در طی چند مرحله استفاده از این بازی روشهایی را برای بهبود آن پیدا کردم و در هر سری از انجام بازی یک روش را امتحان کردم تا به ترکیبی از بهترین روش که بالاترین بازدهی را داشت رسیدم و بعد همه اصول مربوط به روشهای درست انجام این تمرین بسیار قدرتمند را در اپلیکیشن بازی ثروتمندان به کار بردم. شما برای اینکه بتونید ذهن خودتونو پرورش بدید و تقویت کنید اول از همه لازمه که اونو خوب و عالی بشناسید و بتوانید نسبت به همه زوایای ذهن مثل کف دستتون شناخت و تسلط پیدا کنید.این کار با یه کم مطالعه و بعد بیشتر با انجام تمرین و انجام کار عملی ممکن است.ما در بخش آموزش همین اپلیکیشن سعی می کنیم شما به شناخت اولیه در این خصوص برسید و بعد با انجام تمرینات عملی این پروسه را تکمیل کنید.</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="tab_text_1">سوابق دوره ی جاری</string>
    <string name="tab_text_2">تاریخچه دوره ها</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="about_us">"مدرسه  توانگری با هدف توسعه قابلیتهای فردی و معرفی بهترین روشها و تکنیکهای موفقیت بنا شده و در این راه تمام توان و تلاش خود را به کاربرده ایم تا بتوانیم عالی ترین آموزشها را در اختیارتان قرار دهیم و این مهم به ظهور نرسید مگر با مطالعه تخصصی و کاربردی سازی مطالب آموخته شده و ایجاد ارتباط با افراد متخصص و سازمانهای تخصصی در زمینه رشد و توسعه مهارتهای فردی و کشف قابلیتها و استعدادهای نهفته ای که سالها از وجود آنها بی خبربوده ایم.\n"

"مدرسه توانگری با تجمیع اطلاعات و تجربه اساتید بین المللی توانسته مجموعه ای را گردهم آورد که علاوه بر تخصص منحصربه فرد دارای پیشینه ای عالی و عملکردی استثنایی هستند و به این جهت برای اولین بار توانایی عیب یابی عوامل شکست و عدم موفقیت فردی را به صورت فوق تخصصی بررسی می کنیم و راهکارهای کاربردی را برای هر نفر به صورت اختصاصی درنظر می گیریم و به این ترتیب موجب تضمین قطعی موفقیت شما خواهیم شد.\n"

"همکاری انستیتو بین المللی فراآگاهی (تنها مرجع فوق تخصصی نخبه پروری  و پرورش ذهن) در زمینه عیب یابی موانع موفقیت باعث شده تا خروجی عالی از نتایج آموزشها حاصل شود و از سوی دیگر دسترسی به امکانات و ابزارهای تخصصی بین المللی ما را قادر ساخته تا برای هر مشکلی راه حلی عالی و استثنایی برایتان ارائه کنیم و شما چاره ای جز موفقیت و کسب ثروت نخواهید داشت.\n"</string>
    <string name="hello">سلام</string>
    <string name="please_enter_code">لطفا کد ارسال شده به ایمیلتان را وارد کنید</string>
    <string name="code">کد</string>
    <string name="share">دعوت دوستان</string>
    <string name="base_money_explain">هر شخص به اندازه مبلغ پایه ای که انتخاب می کند، هر روز به اندازه آن مبلغ پایه ضربدر عدد روز اعتبار به حسابش واریز می شود، مقدار این مبلغ می تواند با سلیقه شما هم مرتبط باشد ولی پیشنهاد ما اینست که 25 درصد از درآمد ماهانه فعلی شما باشد و یا اگر درآمد مشخصی ندارید می توانید مبلغ 500 هزار تومان را وارد کنید.</string>
    <string name="tutorial_explain">توضیحات مبحث</string>
    <string name="tutorial_name">عنوان آموزش</string>
    <string name="about_game">
        "این یک بازی بسیار خوب و عالی است که شما می توانید به وسیله آن ذهن خود را ثروتمند تربیت کنید و بوسیله آن می توانید کانون توجه خود را از فقر برداشته و بر روی فراوانی و نعمت در جهان بگذارید.\n"
        "این بازی توسط خانم استر هیکس نویسنده و مدرس قوانین موفقیت مطرح شده."
        "\nاولین قانون این است که مقاومت ذهنی خود را کنار بگذارید \nو واقعا بخواهید که بازی را انجام بدهید."
        مقاومت هایی مانند اینکه این تمرین برای من نون و آب نمی شود.
        این تمرین باعث نمی شود که پول واقعی به دستم برسد و را کنار بگذارید این ها دقیقا همان عواملی هستند که باعث می شوند شما نتوانید به ثروت برسید و یا نتوانید از این بازی نتیجه ای بگیرید.
        "\nفراموش نکنید که ذهن انسان قدرت تشخیص و جداسازی بین واقعیت و تخیل را ندارد"
        "پس هر چقدر آن را جدیتر بگیرید و واقعیتر انجام دهید قدرت و تأثیرگذاری آن بیشتر است."
        "اگر بازی را با احساس و هیجانی به اندازه واقعی آن انجام دهید، ذهن به راحتی آن را می پذیرد و شما را در مسیر و شرایطی قرار میدهد که دستیابی به این پول را فراهم میسازد و این پول ها در زندگی شما واقعا ایجاد خواهند شد.\n"
        "مهمترین موضوعی که باید به آن اشاره کنیم این است که ثروت و پول عامل ذهنی هستند و اگر در دنیای واقعی می خواهید پول بیشتری وارد زندگی تان شود اول باید از نظر ذهنی این قضیه را بپذیرید و باورش کنید و زمانی که توانستید باور کنید، مطمئن باشید در دنیای واقعی اتفاقات بی نظیری را تجربه خواهید کرد"
    </string>
    <string name="psychology_message">یک پیام روانشناسانه</string>
    <string name="OK">اکی، همینه</string>
</resources>