<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


    <HorizontalScrollView
        android:id="@+id/scrollView_cats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_cat1"
                style="@style/CategoryRaisedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/category_button_background"
                android:onClick="GoToCat"
                android:text="@string/subcategory1" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_cat2"
                style="@style/CategoryRaisedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/category_button_background"
                android:onClick="GoToCat"
                android:text="@string/subcategory2" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_cat3"
                style="@style/CategoryRaisedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/category_button_background"
                android:onClick="GoToCat"
                android:text="@string/subcategory3" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_cat4"
                style="@style/CategoryRaisedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/category_button_background"
                android:onClick="GoToCat"
                android:text="@string/subcategory4" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_cat5"
                style="@style/CategoryRaisedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/category_button_background"
                android:onClick="GoToCat"
                android:text="@string/subcategory5" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_cat6"
                style="@style/CategoryRaisedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/category_button_background"
                android:onClick="GoToCat"
                android:text="@string/subcategory6" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_cat7"
                style="@style/CategoryRaisedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/category_button_background"
                android:onClick="GoToCat"
                android:text="@string/subcategory7" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_cat8"
                style="@style/CategoryRaisedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/category_button_background"
                android:onClick="GoToCat"
                android:text="@string/subcategory8" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_cat9"
                style="@style/CategoryRaisedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/category_button_background"
                android:onClick="GoToCat"
                android:text="@string/subcategory9" />

        </LinearLayout>

    </HorizontalScrollView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rec_subCats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/scrollView_cats"
        android:layoutDirection="ltr" />


</RelativeLayout>
