<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"
        android:contentDescription="@string/product_pic"
        android:scaleType="fitXY"
        android:src="@drawable/sample1" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_product"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/product_name" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/txt_name"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/line1"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/price"
        android:textColor="@android:color/holo_green_light" />

</RelativeLayout>