<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentStart="true" />

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/circleIndicator"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignBottom="@id/viewPager"
                android:layoutDirection="ltr" />


            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_buy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/circleIndicator"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp"
                app:contentPadding="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/product_name" />

                    <View
                        android:id="@+id/line1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/txt_name"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorBackground" />

                    <TextView
                        android:id="@+id/txt_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@id/line1"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="15dp"
                        android:padding="5dp"
                        android:text="@string/price"
                        android:textColor="@android:color/holo_green_light" />

                    <TextView
                        android:id="@+id/txt_product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/line1"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_toStartOf="@+id/txt_price"
                        android:padding="5dp"
                        android:text="@string/product_price"
                        android:textColor="@android:color/holo_green_light" />

                    <EditText
                        android:id="@+id/et_number"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/txt_price"
                        android:layout_alignTop="@id/txt_price"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@id/txt_number"
                        android:gravity="bottom|center_horizontal"
                        android:inputType="number"
                        android:maxLength="2"
                        android:padding="2dp"
                        android:text="1" />

                    <TextView
                        android:id="@+id/txt_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/txt_price"
                        android:layout_alignParentStart="true"
                        android:layout_alignTop="@id/txt_price"
                        android:layout_marginStart="20dp"
                        android:padding="5dp"
                        android:text="@string/number" />

                    <View
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/txt_price"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorBackground" />


                    <TextView
                        android:id="@+id/txt_total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/line2"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/total_price" />

                    <TextView
                        android:id="@+id/txt_product_total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/txt_total_price"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/txt_total_price" />

                    <Button
                        android:id="@+id/btn_buy"
                        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_below="@id/txt_total_price"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/submit_button_background"
                        android:text="@string/buy" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_buy"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp"
                app:contentPadding="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_description_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/description" />

                    <!--<ScrollView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_below="@id/txt_description_label"-->
                    <!--android:layout_marginTop="4dp">-->

                    <TextView
                        android:id="@+id/txt_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_description_label"
                        android:layout_marginTop="4dp" />

                    <!--</ScrollView>-->

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>